fix spacing

--- a/src/components/Token/Token.scss
+++ b/src/components/Token/Token.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     padding-top: $spacing__3;
-    // padding-bottom: $spacing__3;
+    padding-bottom: $spacing__3;
     border-top: 1px solid $border-color;
 }
 
